fixed pin details infinite looping issues, avatar circular clipping re-added after merge, profile rerouting

--- a/client/src/components/MessageBubble.css
+++ b/client/src/components/MessageBubble.css
@@ -20,6 +20,7 @@
   width: 56px;
   height: 56px;
   border-radius: 50%;
+  overflow: hidden;
   z-index: 1;
 }
 
@@ -28,6 +29,7 @@
   width: 100%;
   height: 100%;
   object-fit: cover; 
+  border-radius: 50%;
 }
 
 /* Area to the right of avatar icon; where all the text is */
